add linkcover action
